new index.html + new sketch

--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>...</title>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <script src="libraries/p5.js" type="text/javascript"></script>
+	<head>
+		<title>...</title>
+	</head>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
-    <script src="sketch.js" type="text/javascript"></script>
-
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
-  <body>
-  </body>
+	<body>
+		<a href="sketches/1/index.html"><img src="sketches/1/img.png" /></a> <br />
+		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a>
+	</body>
 </html>
