new mp3 for a day

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 	<body>
 		<a href="sketches/1/index.html"><img src="sketches/1/img.png" /></a> <br />
-		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a>
+		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a> <br />
+		<a href="1.mp3"><img src="1.jpg" /></a>
 	</body>
 </html>
