--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 	<head>
 		<title>...</title>
 	</head>
-
-	<body>
-		<a href="sketches/1/index.html"><img src="sketches/1/img.png" /></a> <br />
-		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a> <br />
-		<a href="1.mp3"><img src="1.jpg" /></a>
-	</body>
+	
+	<style>
+		body {
+			background-color: rgb(51,51,55);
+		}
+		#content {
+			max-width: 640px;
+			margin: 0 auto;
+		}
+		#content img {
+			border-radius: 25px;
+			border: 1px solid rgb(25, 25, 27);
+		}
+	</style>
+	
+	<body><div id="content">
+		<a href="sketches/1/index.html"><img src="sketches/1/img.png" /></a>
+		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a>
+	</div></body>
 </html>
