--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>...</title>
+		
+		<link rel="stylesheet" href="css/design.css" />
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="js/index.js"></script>
 	</head>
 	
-	<style>
-		body {
-			background-color: rgb(51,51,55);
-		}
-		#content {
-			max-width: 640px;
-			margin: 0 auto;
-		}
-		#content img {
-			border-radius: 25px;
-			border: 1px solid rgb(25, 25, 27);
-		}
-	</style>
-	
-	<body><div id="content">
-		<a href="sketches/1/index.html"><img src="sketches/1/img.png" /></a>
-		<a href="sketches/2/index.html"><img src="sketches/2/img.png" /></a>
-	</div></body>
+	<body id="gradient">
+		<div id="content">
+			<a href="js/sketches/1/index.html"><img src="js/sketches/1/img.png" /></a>
+			<a href="js/sketches/2/index.html"><img src="js/sketches/2/img.png" /></a>
+		</div>
+	</body>
 </html>
