--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div id="content">
 			<a href="js/sketches/1/index.html"><img src="js/sketches/1/img.png" /></a>
 			<a href="js/sketches/2/index.html"><img src="js/sketches/2/img.png" /></a>
+			<a href="js/sketches/3/index.html"><img src="js/sketches/3/img.png" /></a>
 		</div>
 	</body>
 </html>
