--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<a href="js/sketches/1/index.html"><img src="js/sketches/1/img.png" /></a>
 			<a href="js/sketches/2/index.html"><img src="js/sketches/2/img.png" /></a>
 			<a href="js/sketches/3/index.html"><img src="js/sketches/3/img.png" /></a>
+			<a href="js/sketches/4/index.html"><img src="js/sketches/4/img.png" /></a>
 		</div>
 	</body>
 </html>
