--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 		<title>...</title>
 		
 		<link rel="stylesheet" href="css/design.css" />
@@ -15,6 +17,7 @@
 			<a href="js/sketches/1/index.html"><img src="js/sketches/1/img.png" /></a>
 			<a href="js/sketches/2/index.html"><img src="js/sketches/2/img.png" /></a>
 			<a href="js/sketches/3/index.html"><img src="js/sketches/3/img.png" /></a>
+			<a href="js/sketches/4/index.html"><img src="js/sketches/4/img.png" /></a>
 		</div>
 	</body>
 </html>
