--- a/js/sketches/1/index.html
+++ b/js/sketches/1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>...</title>
+    <title>Salut</title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <script src="../libraries/p5.js" type="text/javascript"></script>
 
