--- a/js/sketches/5/index.html
+++ b/js/sketches/5/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>...</title>
+    <title>... que tout... Pascal</title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <script src="../libraries/p5.js" type="text/javascript"></script>
-	<script src="../libraries/p5.sound.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
