--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 	<head>
@@ -23,34 +22,9 @@
 				<a href="js/sketches/5/index.html" class="ab"><img src="js/sketches/5/img.png" /></a>
 			</div>
 		</div>
-		<!-- http://md5decrypt.net/en/Caesar/ clé 11 -->
+		<!-- http://md5decrypt.net/en/Caesar/ utiliser 11 -->
 		<p id="cipher">
 			up eltxp dzytl udftd wszxxp wp awfd spfcpfi of xzyop bflyo udftd lgpn ezt up dltd bfp nl gl ald ezfuzfcd mtpy pe up cprcpeep ezfuzfcd bflyo up ep qlte of xlw dlnsp bfp up eltxp awfd bfp ezfe lf xzyop pe olyd wfytgpcd pe bfp up ozyypcltd xl gtp azfc ezt dt tw wp qlfoclte up gpfi ep cpyocp spfcpfdp of xtpfi bfp up apfe up dftd epwwpxpye nzxmwp bflyo up ep qltd dzfctcp pe pynzcp awfd bflyo up ep qltd ctcp npde xl qtpcep l xzt op qltcp ctcp bfpwbffy zfmwtp ulxltd bfpy luzfelye of mwlyn dfc of yztc zy zmetpye of rctd op awfd py awfd alwp pe bfzy apfe dp nzyepyepc of rctd alwp alcnp mwlyn afcp nl ypitdep ald pe dt yzecp cpwletzy dpclte nzxxp nl utxlrtyp bfzy alcwpclte op yzfd olyd wpd xlrlktypd o yzfmwtp ulxltd wp nstqqcp  yzy awfd ef dltd np yzxmcp wl xp dfte opaftd bfp ult  lyd ef ld dfcpxpye of xlw l wp ncztcp xltd npde wl gpctep up ep nzyepclt fy uzfc nzxxpye npde lcctgpc pe nzxxpye wp yzxmcp  l nzxxpynpc l laalcltecp olyd xzy qczye
 		</p>
 	</body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="icon" href="favicon.ico" type="image/x-icon"/>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-		<title>...</title>
-		
-		<link rel="stylesheet" href="css/design.css" />
-		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-		<script src="js/index.js"></script>
-	</head>
-	
-	<body id="gradient">
-		<div id="content">
-			<a href="js/sketches/1/index.html"><img src="js/sketches/1/img.png" /></a>
-			<a href="js/sketches/2/index.html"><img src="js/sketches/2/img.png" /></a>
-			<a href="js/sketches/3/index.html"><img src="js/sketches/3/img.png" /></a>
-			<a href="js/sketches/4/index.html"><img src="js/sketches/4/img.png" /></a>
-		</div>
-	</body>
-</html>
->>>>>>> origin/master
