--- a/js/sketches/3/index.html
+++ b/js/sketches/3/index.html
@@ -1,18 +1,22 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>... je ...</title>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <script src="../libraries/p5.js" type="text/javascript"></script>
-    <script src="../libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="../libraries/p5.sound.js" type="text/javascript"></script>
-
-    <script src="sketch.js" type="text/javascript"></script>
-
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
-  <body>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+		
+		<link rel="icon" href="../../../favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
+		
+		<script src="../libraries/p5.min.js"></script>
+		<script src="../libraries/p5.dom.js"></script>
+		<script src="../libraries/p5.sound.js"></script>
+		<script src="sketch.js"></script>
+		
+		<style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+		
+		<title>... je ...</title>
+	</head>
+	
+	<body>
+	</body>
 </html>
