--- a/js/sketches/6/index.html
+++ b/js/sketches/6/index.html
@@ -10,11 +10,35 @@
 		<script src="../libraries/p5.min.js"></script>
 		<script src="sketch.js"></script>
 		
-		<style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+		<style>
+			html {
+				height: 100%;
+			}
+			body {
+				background: rgb(11,11,11);
+				color: white;
+				padding: 0;
+				margin: 0;
+			}
+			canvas {
+				vertical-align: top;
+				position: fixed;
+				top: 0;
+				left: 0;
+				z-index: 1;
+			}
+			#contenu {
+				position: relative;
+				z-index: 2;
+			}
+		</style>
 		
 		<title>... que tout... Pascal</title>
 	</head>
 	
 	<body>
+		<div id="rain">
+			d
+		</div>
 	</body>
 </html>
