--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 		
-		<link rel="icon" href="../../../favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		
-		<script src="../libraries/p5.min.js"></script>
-		<script src="sketch.js"></script>
+		<script src="js/sketches/libraries/p5.min.js"></script>
+		<script src="js/sketches/6/sketch.js"></script>
 		
 		<style>
 			html {
@@ -31,13 +31,20 @@
 				position: relative;
 				z-index: 2;
 			}
+			img {
+				display: block;
+				margin: 0 auto;
+				margin-top: 50vh;
+				transform: translateY(-50%);
+			}
 		</style>
 		
-		<title>... que tout... Pascal</title>
+		<title>...........</title>
 	</head>
 	
 	<body>
-		<div id="rain">
+		<div id="contenu">
+			<img src="images/pause11.png" alt="pause11" />
 		</div>
 	</body>
 </html>
