--- a/js/sketches/7/index.html
+++ b/js/sketches/7/index.html
@@ -10,34 +10,11 @@
 		<script src="../libraries/p5.min.js"></script>
 		<script src="sketch.js"></script>
 		
-		<style>
-			html {
-				height: 100%;
-			}
-			body {
-				background: rgb(11,11,11);
-				color: white;
-				padding: 0;
-				margin: 0;
-			}
-			canvas {
-				vertical-align: top;
-				position: fixed;
-				top: 0;
-				left: 0;
-				z-index: 1;
-			}
-			#contenu {
-				position: relative;
-				z-index: 2;
-			}
-		</style>
+		<style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
 		
-		<title>... que tout... Pascal</title>
+		<title>7</title>
 	</head>
 	
 	<body>
-		<div id="rain">
-		</div>
 	</body>
 </html>
